# ai-command-center

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  mod.rs  models.rs  system.rs
src/components/: Chat.tsx  MessageBubble.tsx  ModelSelector.tsx  Sidebar.tsx  SystemStats.tsx
src/lib/: api.ts
src/styles/: index.css
