[package]
name = "ai-command-center"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "ai_command_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]
